--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,13 @@
 {
   "env": {
     "node": true,
-    "jasmine": true,
-    "es6": true
+    "jasmine": true
   },
   "rules": {
     "indent": [2, 2],
     "quotes": [2, "single"],
     "no-multi-spaces": 0,
+    "no-trailing-spaces": 0,
     "no-console": 2,
     "no-process-env": 2,
     "vars-on-top": 2,
