--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   },
   "homepage": "https://github.com/TGOlson/contract-strategy",
   "dependencies": {
+    "browserify": "^10.1.3",
     "contracts-js": "^0.6.3",
     "gulp": "^3.8.11",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-sweetjs": "^0.6.0",
     "harmony-reflect": "^1.1.2",
     "jasmine-node": "^1.14.5",
-    "ramda": "^0.13.0"
+    "ramda": "^0.13.0",
+    "sweetify": "^0.4.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
